--- a/.github/workflows/0-windows-min-plain-shared.yml
+++ b/.github/workflows/0-windows-min-plain-shared.yml
@@ -6,7 +6,7 @@
 # https://www.openssl.org/source/license.html
 
 name: act-Windows
-# 2023-12-21 20:10
+# 2023-12-21 21:00
 #
 #
 
@@ -49,16 +49,15 @@ on:
 #   contents: read
 
 env:
-  DEBUG_LS: yes
-  TAG_NAME: "openssl"
-  RELEASE_NAME: openssl
-  RELEASE_DIR: "_build/_dest"
-  INSTALL_DIR: "_build/_dest/Program Files/OpenSSL"
-  VERSION: 3.2.0-dev
-  GUI: win64
-  BUILD_NAME: BLD-openssl
-  ASSET_RELEASE: none
-  ASSET_BUILD: none
+  TAG_NAME:     "OpenSSL"
+  TAG_VERSION:  "openssl-0.0.0-dev"
+  TAG_BUILD:    "-b"
+  TAG_REF:      "0000000"
+  PROG_NAME:    "openssl"
+  PROG_VERSION: "0.0.0"
+  VERSION:      "0.0.0"
+  RELEASE_DIR:  "_build/_dest"
+  INSTALL_DIR:  "_build/_dest/Program Files/OpenSSL"
 
 jobs:
   shared:
@@ -81,6 +80,58 @@ jobs:
     steps:
     - name: Checkout
       uses: deep-soft/checkout@v4
+
+## -- read from VERSION.dat - begin
+      - name: Read version from VERSION.dat
+        continue-on-error: true
+        shell: bash
+        run: |
+          _major_=$(grep "MAJOR" | awk -F "=" '{print $2}' VERSION.dat;
+          _minor_=$(grep "MINOR" | awk -F "=" '{print $2}' VERSION.dat;
+          _patch_=$(grep "PATCH" | awk -F "=" '{print $2}' VERSION.dat;
+          _prert_=$(grep "PRE_RELEASE_TAG" | awk -F "=" '{print $2}' VERSION.dat;
+          _prog_version_=$_major_.$_minor_.$_patch_-$_prert_;
+          echo "PROG_VERSION=[$_prog_version_]"
+          echo "PROG_VERSION=$_prog_version_" >> $GITHUB_ENV
+
+      - name: Set TAG_VERSION
+        shell: bash
+        run: |
+          echo "TAG_VERSION=${{ env.PROG_NAME }}-${{ env.PROG_VERSION }}"
+          echo "TAG_VERSION=${{ env.PROG_NAME }}-${{ env.PROG_VERSION }}" >> $GITHUB_ENV
+
+      - name: Print env.PROG_VERSION
+        shell: bash
+        run: |
+          echo "show new value for env.PROG_VERSION"
+          echo "PROG_VERSION = ${{ env.PROG_VERSION }}"
+          echo "TAG_VERSION  = ${{ env.TAG_VERSION  }}"
+
+## -- read from VERSION.dat - end
+
+## - get ref set build - begin
+      - name: Get ref, set build version
+        shell: bash
+        run: |
+          _ref_all_=$(git log -1 --format='%H')
+          # _ref_=$(echo ${_ref_all_::7})
+          _date_=$(date +%Y%m%d)
+          _ref_org_=${{ env.TAG_REF }}
+          _ref_len_="${#_ref_org_}"
+          _ref_=$(echo ${_ref_all_::$_ref_len_})
+          echo "TAG_REF=$_ref_" >> $GITHUB_ENV
+          _build_=${{ env.TAG_BUILD }}-$_date_-$_ref_
+          echo "TAG_BUILD=$_build_" >> $GITHUB_ENV
+          echo "WORK_DIR=$(pwd)" >> $GITHUB_ENV
+          echo "TAG_DATE=$_date_" >> $GITHUB_ENV
+
+      - name: Print ref, build version
+        shell: bash
+        run: |
+          echo "REF: ${{ env.TAG_REF }}
+          echo "BLD: ${{ env.TAG_BUILD }}
+          echo "${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}" > _tag_name_.txt
+## - get ref set build - end
 
     - name: Checkout fuzz/corpora submodule
       run: git submodule update --init --depth 1 fuzz/corpora
@@ -127,7 +178,7 @@ jobs:
       uses: deep-soft/zip-release@v2
       with:
         type: 'zip'
-        filename: '${{ env.TAG_NAME }}-${{ env.VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}.zip'
+        filename: '${{ env.TAG_VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}.zip'
         directory: '${{ env.INSTALL_DIR }}'
         exclusions: '*.map *.pdb'
         recursive_exclusions: '*.map *.pdb'
@@ -139,9 +190,10 @@ jobs:
       continue-on-error: true
       uses: deep-soft/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}
+        tag_name: ${{ env.TAG_NAME }}-${{ env.PROG_VERSION }}
         files: |
           ${{ env.ZIP_RELEASE_ARCHIVE }}
+         _tag_name_.txt
 # zip release end
 
     - name: Download coreinfo
@@ -179,7 +231,7 @@ jobs:
       uses: deep-soft/zip-release@v2
       with:
         type: 'zip'
-        filename: '${{ env.TAG_NAME }}-${{ env.VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}-ALL.zip'
+        filename: '${{ env.TAG_VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}-ALL.zip'
         directory: '.'
         #exclusions: '*.map *.pdb'
         #recursive_exclusions: '*.map *.pdb'
@@ -191,9 +243,10 @@ jobs:
       continue-on-error: true
       uses: deep-soft/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}-ALL
+        tag_name: ${{ env.TAG_NAME }}-${{ env.PROG_VERSION }}-ALL
         files: |
           ${{ env.ZIP_RELEASE_ARCHIVE }}
+         _tag_name_.txt
 # zip release end
 
   plain:
@@ -210,6 +263,58 @@ jobs:
     steps:
     - name: Checkout
       uses: deep-soft/checkout@v4
+
+## -- read from VERSION.dat - begin
+      - name: Read version from VERSION.dat
+        continue-on-error: true
+        shell: bash
+        run: |
+          _major_=$(grep "MAJOR" | awk -F "=" '{print $2}' VERSION.dat;
+          _minor_=$(grep "MINOR" | awk -F "=" '{print $2}' VERSION.dat;
+          _patch_=$(grep "PATCH" | awk -F "=" '{print $2}' VERSION.dat;
+          _prert_=$(grep "PRE_RELEASE_TAG" | awk -F "=" '{print $2}' VERSION.dat;
+          _prog_version_=$_major_.$_minor_.$_patch_-$_prert_;
+          echo "PROG_VERSION=[$_prog_version_]"
+          echo "PROG_VERSION=$_prog_version_" >> $GITHUB_ENV
+
+      - name: Set TAG_VERSION
+        shell: bash
+        run: |
+          echo "TAG_VERSION=${{ env.PROG_NAME }}-${{ env.PROG_VERSION }}"
+          echo "TAG_VERSION=${{ env.PROG_NAME }}-${{ env.PROG_VERSION }}" >> $GITHUB_ENV
+
+      - name: Print env.PROG_VERSION
+        shell: bash
+        run: |
+          echo "show new value for env.PROG_VERSION"
+          echo "PROG_VERSION = ${{ env.PROG_VERSION }}"
+          echo "TAG_VERSION  = ${{ env.TAG_VERSION  }}"
+
+## -- read from VERSION.dat - end
+
+## - get ref set build - begin
+      - name: Get ref, set build version
+        shell: bash
+        run: |
+          _ref_all_=$(git log -1 --format='%H')
+          # _ref_=$(echo ${_ref_all_::7})
+          _date_=$(date +%Y%m%d)
+          _ref_org_=${{ env.TAG_REF }}
+          _ref_len_="${#_ref_org_}"
+          _ref_=$(echo ${_ref_all_::$_ref_len_})
+          echo "TAG_REF=$_ref_" >> $GITHUB_ENV
+          _build_=${{ env.TAG_BUILD }}-$_date_-$_ref_
+          echo "TAG_BUILD=$_build_" >> $GITHUB_ENV
+          echo "WORK_DIR=$(pwd)" >> $GITHUB_ENV
+          echo "TAG_DATE=$_date_" >> $GITHUB_ENV
+
+      - name: Print ref, build version
+        shell: bash
+        run: |
+          echo "REF: ${{ env.TAG_REF }}
+          echo "BLD: ${{ env.TAG_BUILD }}
+          echo "${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}" > _tag_name_.txt
+## - get ref set build - end
 
     - name: Checkout fuzz/corpora submodule
       run: |
@@ -251,7 +356,7 @@ jobs:
       uses: deep-soft/zip-release@v2
       with:
         type: 'zip'
-        filename: '${{ env.TAG_NAME }}-${{ env.VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}.zip'
+        filename: '${{ env.TAG_VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}.zip'
         directory: '${{ env.INSTALL_DIR }}'
         exclusions: '*.map *.pdb'
         recursive_exclusions: '*.map *.pdb'
@@ -263,9 +368,10 @@ jobs:
       continue-on-error: true
       uses: deep-soft/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}
+        tag_name: ${{ env.TAG_NAME }}-${{ env.PROG_VERSION }}
         files: |
           ${{ env.ZIP_RELEASE_ARCHIVE }}
+         _tag_name_.txt
 # zip release end
 
     - name: Download coreinfo
@@ -297,7 +403,7 @@ jobs:
       uses: deep-soft/zip-release@v2
       with:
         type: 'zip'
-        filename: '${{ env.TAG_NAME }}-${{ env.VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}-ALL.zip'
+        filename: '${{ env.TAG_VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}-ALL.zip'
         directory: '.'
         #exclusions: '*.map *.pdb'
         #recursive_exclusions: '*.map *.pdb'
@@ -309,9 +415,10 @@ jobs:
       continue-on-error: true
       uses: deep-soft/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}-ALL
+        tag_name: ${{ env.TAG_NAME }}-${{ env.PROG_VERSION }}-ALL
         files: |
           ${{ env.ZIP_RELEASE_ARCHIVE }}
+         _tag_name_.txt
 # zip release end
 
   minimal:
@@ -328,6 +435,59 @@ jobs:
     steps:
     - name: Checkout
       uses: deep-soft/checkout@v4
+
+## -- read from VERSION.dat - begin
+      - name: Read version from VERSION.dat
+        continue-on-error: true
+        shell: bash
+        run: |
+          _major_=$(grep "MAJOR" | awk -F "=" '{print $2}' VERSION.dat;
+          _minor_=$(grep "MINOR" | awk -F "=" '{print $2}' VERSION.dat;
+          _patch_=$(grep "PATCH" | awk -F "=" '{print $2}' VERSION.dat;
+          _prert_=$(grep "PRE_RELEASE_TAG" | awk -F "=" '{print $2}' VERSION.dat;
+          _prog_version_=$_major_.$_minor_.$_patch_-$_prert_;
+          echo "PROG_VERSION=[$_prog_version_]"
+          echo "PROG_VERSION=$_prog_version_" >> $GITHUB_ENV
+
+      - name: Set TAG_VERSION
+        shell: bash
+        run: |
+          echo "TAG_VERSION=${{ env.PROG_NAME }}-${{ env.PROG_VERSION }}"
+          echo "TAG_VERSION=${{ env.PROG_NAME }}-${{ env.PROG_VERSION }}" >> $GITHUB_ENV
+
+      - name: Print env.PROG_VERSION
+        shell: bash
+        run: |
+          echo "show new value for env.PROG_VERSION"
+          echo "PROG_VERSION = ${{ env.PROG_VERSION }}"
+          echo "TAG_VERSION  = ${{ env.TAG_VERSION  }}"
+
+## -- read from VERSION.dat - end
+
+## - get ref set build - begin
+      - name: Get ref, set build version
+        shell: bash
+        run: |
+          _ref_all_=$(git log -1 --format='%H')
+          # _ref_=$(echo ${_ref_all_::7})
+          _date_=$(date +%Y%m%d)
+          _ref_org_=${{ env.TAG_REF }}
+          _ref_len_="${#_ref_org_}"
+          _ref_=$(echo ${_ref_all_::$_ref_len_})
+          echo "TAG_REF=$_ref_" >> $GITHUB_ENV
+          _build_=${{ env.TAG_BUILD }}-$_date_-$_ref_
+          echo "TAG_BUILD=$_build_" >> $GITHUB_ENV
+          echo "WORK_DIR=$(pwd)" >> $GITHUB_ENV
+          echo "TAG_DATE=$_date_" >> $GITHUB_ENV
+
+      - name: Print ref, build version
+        shell: bash
+        run: |
+          echo "REF: ${{ env.TAG_REF }}
+          echo "BLD: ${{ env.TAG_BUILD }}
+          echo "${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}" > _tag_name_.txt
+## - get ref set build - end
+
 
     - name: Checkout fuzz/corpora submodule
       run: |
@@ -369,7 +529,7 @@ jobs:
       uses: deep-soft/zip-release@v2
       with:
         type: 'zip'
-        filename: '${{ env.TAG_NAME }}-${{ env.VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}.zip'
+        filename: '${{ env.TAG_VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}.zip'
         directory: '${{ env.INSTALL_DIR }}'
         exclusions: '*.map *.pdb'
         recursive_exclusions: '*.map *.pdb'
@@ -381,9 +541,10 @@ jobs:
       continue-on-error: true
       uses: deep-soft/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}
+        tag_name: ${{ env.TAG_NAME }}-${{ env.PROG_VERSION }}
         files: |
           ${{ env.ZIP_RELEASE_ARCHIVE }}
+         _tag_name_.txt
 # zip release end
 
     - name: Download coreinfo
@@ -415,7 +576,7 @@ jobs:
       uses: deep-soft/zip-release@v2
       with:
         type: 'zip'
-        filename: '${{ env.TAG_NAME }}-${{ env.VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}-ALL.zip'
+        filename: '${{ env.TAG_VERSION }}-${{ matrix.os }}-${{ matrix.job_type.type }}-${{ matrix.platform.arch }}-ALL.zip'
         directory: '.'
         #exclusions: '*.map *.pdb'
         #recursive_exclusions: '*.map *.pdb'
@@ -427,7 +588,8 @@ jobs:
       continue-on-error: true
       uses: deep-soft/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}-${{ env.VERSION }}-ALL
+        tag_name: ${{ env.TAG_NAME }}-${{ env.PROG_VERSION }}-ALL
         files: |
           ${{ env.ZIP_RELEASE_ARCHIVE }}
+         _tag_name_.txt
 # zip release end
