--- a/.github/workflows/0-windows-min-plain-shared.yml
+++ b/.github/workflows/0-windows-min-plain-shared.yml
@@ -127,8 +127,8 @@ jobs:
     - name: Print ref, build version
       shell: bash
       run: |
-        echo "REF: ${{ env.TAG_REF }}
-        echo "BLD: ${{ env.TAG_BUILD }}
+        echo "REF: ${{ env.TAG_REF }}"
+        echo "BLD: ${{ env.TAG_BUILD }}"
         echo "${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}" > _tag_name_.txt
 ## - get ref set build - end
 
@@ -309,8 +309,8 @@ jobs:
     - name: Print ref, build version
       shell: bash
       run: |
-        echo "REF: ${{ env.TAG_REF }}
-        echo "BLD: ${{ env.TAG_BUILD }}
+        echo "REF: ${{ env.TAG_REF }}"
+        echo "BLD: ${{ env.TAG_BUILD }}"
         echo "${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}" > _tag_name_.txt
 ## - get ref set build - end
 
@@ -480,8 +480,8 @@ jobs:
     - name: Print ref, build version
       shell: bash
       run: |
-        echo "REF: ${{ env.TAG_REF }}
-        echo "BLD: ${{ env.TAG_BUILD }}
+        echo "REF: ${{ env.TAG_REF }}"
+        echo "BLD: ${{ env.TAG_BUILD }}"
         echo "${{ env.TAG_NAME }}-${{ env.TAG_BUILD }}" > _tag_name_.txt
 ## - get ref set build - end
 
