--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -9,8 +9,10 @@ name: Coverage
 
 # Run once a day
 on:
-  schedule:
-    - cron:  '49 0 * * *'
+  workflow_dispatch:
+#  schedule:
+#    - cron:  '49 0 * * *'
+
 
 permissions:
   contents: read
